fixed number filed in form, adaptive on small height

--- a/app/scss/_glob.scss
+++ b/app/scss/_glob.scss
@@ -89,7 +89,6 @@ body {
 		flex-direction: column;
 		justify-content: center;
 
-		max-width: 400px;
 		width: 100%;
 
 		&__label {
@@ -107,7 +106,6 @@ body {
 			margin-top: 5px;
 			padding: 5px 10px;
 
-			max-width: 400px;
 			width: 100%;
 
 			display: block;
